--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,600;0,9..40,700;0,9..40,1000;1,9..40,100;1,9..40,500;1,9..40,700;1,9..40,1000&display=swap');
+
 body {
-  font-family: sans-serif;
+  font-family: 'DM Sans', sans-serif;
   overflow: hidden;
+}
+.navbar{
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 30px;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+.logo span{
+  font-size: larger;
+  font-weight: bold;
+}
+.buy{
+  margin-right: 20px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 30px;
+  height: fit-content;
+  cursor: pointer;
+}
+.section{
+  height: 50vh;
+  width: 100vw;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  position: absolute
 }
 #webgi-canvas {
   width: 100%;
