--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ body {
   z-index: 1;
   display: flex;
   align-items: center;
-  position: absolute
+  position: absolute ;
 }
 #webgi-canvas {
   width: 100%;
